  * [DEV] Correction de l'installeur docker - bis
  * [DEV] Correction de l'installeur docker - ter
  * [DEV] Correction de l'installeur docker - pfff
  * [DEV] Modification des modalités de sortie de l'installeur docker
  * [DEV] Correction d'un problème d'accès aux commandes inist-tools en
    tant que root
  * [DEV] Ajout de l'executable 'inistexec' dans le paquet distribué
  * [DEV] Ajout de l'installation de lsb-release sur Debian s'il est
    absent
  * [DEV] Amélioration de la fonction de détection de la version de
    Debian installée
  * [DEV] Proxy pour apt-key
  * [DEV] Proxy pour apt-key
  * [DEV] bug àlc
  * [DEV] Màj doc en-ligne
  * [DEV] Correction du 'bug' (workaround) lié à 'logname' dont le
    résultat est fantaisiste dans une console graphique sous Ubuntu
    16.04
  * [DEV] Màj README.md
  * [DEV] Modification du message d'info
  * [DEV] Remplacement de 'env' par 'shell' (plus parlant)
  * [DEV] Remplacement de 'env' par 'shell' (plus parlant) -- bis
  * [DEV] Documentation de 'inist docker install'
  * [DEV] Commit -- 14/11/2016 @ 09:12:00
  * [DEV] Correction : bug sur la persistance des options pour
    shell/system + bug d'affichage du status pour shell/system
  * [DEV] Ajout d'une valeur par défaut à vide pour DOCKER_OPTS_CUSTOM
  * [DEV] Correction de nombreux bugs dans docker-install + démasquage
    des logs d'installation pour analyse
  * [DEV] Ajout de la version 'latest' à chaque publication d'un nouveau
    package pour faciliter le téléchargement depuis la doc dans github
  * [DEV] Commit -- 18/11/2016 @ 09:03:22
  * [DEV] Correction du bug 'id' dans env-create.sh
  * [DEV] Correction d'un bug d'information sur l'installation de lsb-
    release pour Debian
  * [DEV] Correction du bug #latest
  * [DEV] Correction du bug #latest #2
  * [DEV] Bug sur l'évaluation de la version du kernel dans docker-
    install
  * [DEV] Un exit mal placé...

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200